@@ -1,5 +1,10 @@
 2007-10-09  Jakub Jelinek  <jakub@redhat.com>
 
+	* src/doit.c (find_ents): Clear e->u.tmp.
+	(clear_ent_marks, find_unlisted_dependency): Remove.
+	(prelink_ent): More efficient non-recursive check for
+	unlisted dependencies.
+
 	* src/cxx.c (find_cxx_sym): If fcs->lastndx != -1, search first
 	among symbols around it.
 
